style: apply OpenRewrite static analysis to TournamentDetailViewTest
Mechanical rewrites produced by the pre-push hook's rewrite:run during the
banner-fix push: drop redundant Predicate casts, use List.getFirst(), remove
an unused import. TournamentDetailViewTest passes 9/9.

Co-Authored-By: Claude Code <noreply@anthropic.com>